--- a/public/style.css
+++ b/public/style.css
@@ -3,253 +3,256 @@
     box-sizing: border-box;
     margin: 0;
     scroll-behavior: smooth;
-}
-
-body {
-    background-color: rgb(162, 204, 204);
-}
-
-header {
+  }
+  
+  body {
+    background-color: rgb(126, 118, 243);
+  }
+  
+  header {
     padding: 1rem;
-    box-shadow: 0 3px 5px rgb(241, 241, 207);
+    box-shadow: 0 3px 5px rgb(232, 235, 232);
     position: sticky;
     top: 0;
     left: 0;
-    background-color: #dfedf1;
+    background-color: #ec505d;
     z-index: 1;
-}
-
-button {
+  }
+  
+  button {
     cursor: pointer;
-}
-
-img logoSaude {
+  }
+  
+  img logoSaude {
     padding: 1rem;
     min-height: 100dvh;
-}
-
-nav{
+  }
+  
+  nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-nav ul{
+  }
+  
+  nav ul{
     display: flex;
     list-style: none;
-}
-
-nav ul a{
-    margin-left: 2rem;
+  }
+  
+  nav ul a{
+    margin-left: 6rem;
     font-weight: bold;
-}
-
-.nav-item {
-    color: #374058;
+    font-size: 18px;
+  }
+  
+  .nav-item {
+    color: #0c0c0c;
     text-decoration: none;
-}
-
-.nav-item:hover {
-    color: rgb(179, 229, 229);
-}
-
-main {
+  }
+  
+  .nav-item:hover {
+    color: rgb(232, 235, 232);
+  }
+  
+  main {
     padding: 5rem;
     min-height: 100dvh;
-}
-
-footer {
-    background-color: #374058;
+  }
+  
+  footer {
+    background-color: #ebe856;
     padding: 1rem;
-    color: #fff;
+    color: #0a0a0a;
     position: sticky;
     bottom: 0;
     display: flex;
     justify-content: space-around;
     font-weight: bold;
-    box-shadow: 0 -5px 10px #fff;
-}
-
-footer a {
+    box-shadow: 0 -5px 10px #e9e6e6;
+  }
+  
+  footer a {
     text-decoration: none;
-    color: #fff;
-}
-
-#main-aside{
+    color: #080808;
+  }
+  
+  #main-aside{
     font-family: Arial, sans-serif;
     display: flex;
     flex-direction: row;
     margin-top: 50px;
     margin: 1rem;
-}
-
-#main-aside > h1 {  
+  }
+  
+  #main-aside > h1 {  
     flex-wrap: wrap;
     font-weight: 200;  
     line-height: 10px;  
     text-align: justify;
-    color: darkviolet;
+    color: rgb(5, 5, 5);
     font-size: 60px;
     margin-bottom: 2rem;
-    position: sticky;
-}
-
-
-#hero{
+  }
+  
+  
+  #hero{
     display: flex;
-    color: #374058;
+    color: #0a0a0a;
     padding: 3rem 3rem;
-}
-
-#explainer-equipeTI-content {
+    border: 5px solid #f15865;
+  }
+  
+  #explainer-equipeTI-content {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-#explainer-equipeTI-content > img {
-    width: 100%;    
-}
-
-#explainer-text{
+  }
+  
+  #explainer-equipeTI-content > img {
+    width: 95%;    
+  }
+  
+  #explainer-text{
     display: flex;
     flex-direction: column;
-    align-items: center;
-}
-
-#explainer > h2, 
-#explainer > h3 {
+  }
+  
+  #explainer > h2, 
+  #explainer > h3 {
     margin-bottom: 2rem;
     max-width: 60%;
-}
-
-#cta-explainer > text {
+  }
+  
+  #cta-explainer > text{
     border: none;
     padding: 10rem;
     display: flex;
     justify-content: center;
-    background-color: #374058;
-    color: #fff;
+    background-color: #76dfaa;
+    color: #f3f7f3;
     border-radius: 20px;
     font-weight: bold;
     text-align: center;
-    border: 5px solid red;
-}
-
-a:hover {
-    color: #5e6d97;
+  }
+  
+  a:hover {
+    color: #ecf1eb;
     transition: 0.3s all;
-}
-
-#cta-saiba-btn{
-    border: 2px solid rgb(216, 77, 216);
+  }
+  
+  #cta-saiba-btn {
+    border: 2px solid rgb(14, 13, 14);
     padding: 10;
     border-radius: 15px;
-}
-#cta-saiba-btn:hover{
-    background-color:  rgb(235, 156, 235);
-    color: #e47878;
-}
-
-#about {
+  }
+  #cta-saiba-btn:hover{
+    background-color:  rgb(2, 2, 2);
+    color: #050505;
+  }
+  
+  #about {
     display: flex;
-    justify-content: center;
-    gap: 1rem;
-    flex-wrap: wrap;
-    align-items: center;
-    margin: 2rem 0;
-    padding: 3rem 0;
-    color: #374058;
-}
-
-#about > h3 {
-    max-width: 60%;
-}
-
-#staffTI-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 1rem 0;
-    padding: 3rem 0;
-}
-
-#staffTI-container > h2 {
-    margin: 3rem 0;
-    color: darkmagenta;
-    font-size: 55px;
-}
-
-#staff {
-    display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     gap: 1rem;
-}
-
-#staff > article {
+    flex-wrap: wrap;
+    align-items: center;
+    margin: 8rem 0;
+    padding: 4rem 0;
+    color: #050505;
+  }
+  
+  #about > h3 {
+    max-width: 55%;
+  }
+  
+  #staffTI-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 500px;
-    background-color: #374058;
-    color: #f0f0f0;
+    margin: 6rem 0;
+    padding: 4rem 0;
+  }
+  
+  #staffTI-container > h2 {
+    margin: 3rem 0;
+    color: rgb(8, 8, 8);
+    font-size: 55px;
+    margin-bottom: 2rem;
+    
+  }
+  
+  #staff {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;
+  }
+  
+  #staff > article {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 380px;
+    background-color: #f1eff7;
+    color: #020111;
     border-radius: 10px;
     padding: 1rem;
-}
-
-#staff > article > img {
+    gap: 1rem;
+  }
+  
+  #staff > article > img {
     width: 8rem;  
     z-index: 0;
-}
-
-#account {
+  }
+  
+  #account {
     display: flex;
     justify-content: space-around;
     margin: 2rem 0;
     padding: 1rem 0;
-}
-
-#registration-form {
+  }
+  
+  #registration-form {
     display: flex;
     flex-direction: column;
-    background-color: #374058;
-    color: #f0f0f0;
+    background-color: #f0f3ef;
+    color: #0e0d0d;
     height: fit-content;
     padding: 2rem;
     border-radius: 10px;
     gap: 2rem;
-}
-
-.input-wrapper {
+  }
+  
+  .input-wrapper {
     display: flex;
     align-items: center;
-}
-
-.input-wrapper > input {
+  }
+  
+  .input-wrapper > input {
     flex-grow: 1;
     padding: 0.3rem;
     font-weight: bold;
     border-radius: 3px;
-}
-
-.input-wrapper > label {
+  }
+  
+  .input-wrapper > label {
     width: 130px;
     text-align: end;
     padding-right: 10px;
-}
-
-#register-button {
+  }
+  
+  #register-button {
     padding: 0.2rem;
     border-radius: 8px;
     font-weight: bold;
     font-size: 1rem;
     background-color: #f0f0f0;
     color: #374058;
-}
-
-#register-button:hover {
+  }
+  
+  #register-button:hover {
     background-color: #92a8e4;
     color: #f0f0f0;
     transition: 0.1s all ease-in;
-}
+  }
+ 
